# skillhub-data-processing-old

./: .gitignore  advantages.txt  advantages_ngrams_2.txt  advantages_ngrams_3.txt  advantages_ngrams_4.txt  advantages_ngrams_5.txt  constants.py  disadvantages.txt  disadvantages_ngrams_2.txt  disadvantages_ngrams_3.txt  disadvantages_ngrams_4.txt  disadvantages_ngrams_5.txt  ngrams.py  pyproject.toml  save_advantages.py  save_disadvantages.py  save_text.py  sentiment.py  tags.py
